# RPI-Server

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: current-status-ko.md  git-ci-plan-ko.md  latency-measurement-ko.md  new-task-prompt-ko.md  project-constraints-ko.md  sunapi-event-recording-ko.md  sunapi-event-recording.md  time-offset-measurement-ko.md  vms-development-roadmap-ko.md
include/rtsps/: app_config.h  channel_ingest.h  channel_manager.h  digest_authenticator.h  gstreamer_recorder.h  live_rtsp_server.h  logger.h  recording_index.h  rtsp_message_parser.h  rtsp_proxy_server.h  rtsp_proxy_session.h  rtsp_rewriter.h  storage_manager.h  tls_context.h
src/: main.cpp
src/config/: app_config.cpp
src/db/: recording_index.cpp
src/live/: live_rtsp_server.cpp
src/logging/: logger.cpp
src/media/: channel_ingest.cpp  channel_manager.cpp  gstreamer_recorder.cpp
src/net/: tls_context.cpp
src/proxy/: rtsp_proxy_server.cpp  rtsp_proxy_session.cpp
src/rtsp/: digest_authenticator.cpp  rtsp_message_parser.cpp  rtsp_rewriter.cpp
src/storage/: storage_manager.cpp
systemd/: rpi-vms.service.example
tests/: channel_ingest_test.cpp  channel_manager_test.cpp  live_rtsp_server_test.cpp
tools/: check-time-sync.sh  collect-environment.sh  generate-dev-tls-cert.sh  measure-m4-load.sh  measure_time_offsets.py  probe_rtsp_status.py  run-m3-qt-smoke.sh  run-m4-qt-smoke.sh  sync-to-pi.sh  test-m3-integration.sh  test-m3-multiclient.sh  test-m3-rtsps.sh  test-m4-camera-startup.sh  test-m4-integration.sh  test-m4-rtsps-routing.sh  test_measure_time_offsets.py  test_rtsp_test_clients.py  test_rtsps_client.cpp  test_slow_rtsp_client.py
